--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.5.1",
+    "@react-navigation/stack": "^5.5.1",
     "babel-plugin-inline-import": "^3.0.0",
     "metro-config": "^0.59.0",
     "prop-types": "^15.7.2",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-reanimated": "^1.9.0",
+    "react-native-safe-area-context": "^3.0.2",
+    "react-native-screens": "^2.8.0",
     "react-native-svg": "^12.1.0",
     "react-navigation": "^4.3.9",
     "styled-components": "^5.1.1"
